# gaad-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: google-analytics-admin.md
.claude/skills/gaad-cli/: SKILL.md
.github/workflows/: release-please.yml
src/gaad/: __init__.py  auth.py  cli.py  config.py  errors.py
src/gaad/commands/: __init__.py  accounts.py  annotations.py  auth.py  channel_groups.py  custom_dimensions.py  custom_metrics.py  data_streams.py  key_events.py  properties.py
src/gaad/shared/: __init__.py  client.py  console.py  output.py  utils.py
tests/: conftest.py  test_auth.py  test_config.py
tests/commands/: test_accounts.py  test_annotations.py  test_auth_commands.py  test_channel_groups.py  test_custom_dimensions.py  test_custom_metrics.py  test_data_streams.py  test_key_events.py  test_properties.py
tests/shared/: test_client.py  test_output.py  test_utils.py
